@@ -127,7 +127,7 @@ This is the toolbar: [[Image:Toolbar.png]]",
 'tog-watchlisthideliu'        => "Option in tab 'Watchlist' of [[Special:Preferences]]",
 'tog-watchlisthideanons'      => "Option in tab 'Watchlist' of [[Special:Preferences]]",
 'tog-watchlisthidepatrolled'  => 'Option in Watchlist tab of [[Special:Preferences]]',
-'tog-nolangconversion'        => 'In user preferences.',
+'tog-variantconversion'       => 'In user preferences.',
 'tog-ccmeonemails'            => 'In user preferences',
 'tog-diffonly'                => 'Toggle option used in [[Special:Preferences]].',
 'tog-showhiddencats'          => 'Toggle option used in [[Special:Preferences]].',
