@@ -14,6 +14,10 @@
 $fallback = 'sr-ec';
 $linkTrail = '/^([abvgdđežzijklljmnnjoprstćufhcčdžšабвгдђежзијклљмнњопрстћуфхцчџш]+)(.*)$/usD';
 
+$extraUserToggles = array(
+	'variantconversion',
+);
+
 $messages = array(
 # Special:LinkSearch
 'linksearch'       => 'Претрага интернет веза',
